# gpu-project

./: CMakeLists.txt  LDLt.cu  LDLt.h  benchmark.cu  benchmark.py  benchmark_fact.cu  benchmark_solver.csv  benchmark_solver.py  compile.sh  file.txt  ide_params.h  main.cu  main_fact.cu  main_solve.cu  output  parallel_solver.cu  parallel_solver.h  readme.md  test.cu  test.py  test2.py  utils.cu  utils.h  verify_facto.py  verify_solver.py  verify_solver.sh
exports/: benchmark_solver.csv
report/: beamerthemesorbonne.sty  main.aux  main.fdb_latexmk  main.fls  main.nav  main.tex  main.toc
